--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "ContextualDAG"
 uuid = "cab09736-673a-4a0d-83a6-1cdd58bdfd72"
 authors = ["Ryan Thompson"]
-version = "1.0.1-DEV"
+version = "1.0.2"
 
 [deps]
 CUDA = "052768ef-5323-5732-b1bb-66c8b64840ba"
@@ -10,7 +10,9 @@ Graphs = "86223c79-3864-5bf0-83f7-82e725a168b6"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
+TikzGraphs = "b4f28e30-c73f-5eaf-a395-8a9db949a742"
 Zygote = "e88e6eb3-aa80-5325-afca-941959d7151f"
+cuDNN = "02a925ec-e4fe-4b08-9a7e-0d78e3d38ccd"
 
 [compat]
 julia = "1"
